--- a/presentation.tex
+++ b/presentation.tex
@@ -76,18 +76,21 @@
 \subsection{Utfordringer og trusler}
 \begin{frame}
 \frametitle{Utfordringer og trusler}
-Utfordringer:
-  \begin{itemize}
-    \item Avhengig av å ha en antenne med fri sikt.
-    \item Kjent kodestruktur.
-    \item Naive mottakere.
-  \end{itemize}
-  Terror, sabotasje mulig motiv for:
-  \begin{itemize}
-    \item Jamming.
-    \item Spoofing.
-    \item Feil i utstyr.
-  \end{itemize}  
+      \begin{figure}
+        \includegraphics[scale=0.15]{thesis/graphics/montage.pdf}
+      \end{figure}
+%Utfordringer:
+%  \begin{itemize}
+%    \item Avhengig av å ha en antenne med fri sikt.
+%    \item Kjent kodestruktur.
+%    \item Naive mottakere.
+%  \end{itemize}
+%  Terror, sabotasje mulig motiv for:
+%  \begin{itemize}
+%    \item Jamming.
+%    \item Spoofing.
+%    \item Feil i utstyr.
+%  \end{itemize}  
 \end{frame}
 
 \subsubsection{Referansetrusselen}
