--- a/presentation.tex
+++ b/presentation.tex
@@ -67,7 +67,7 @@
               \hspace{-50pt}
       \begin{figure}
         \includegraphics[scale=0.1]{thesis/graphics/pmu.png}
-        \caption{PMU}
+        \caption{PMU \cite{PMU}}
       \end{figure}
     %\begin{itemize}
     %    \item Tidsstempling 
@@ -103,19 +103,25 @@
 %  \end{itemize}  
 \end{frame}
 
+\begin{frame}
+\frametitle{Utfordringer og trusler}
+      \begin{figure}
+        \includegraphics[scale=0.40]{thesis/graphics/fare.pdf}
+      \end{figure} 
+\end{frame}
+
 \subsubsection{Referansetrusselen}
 \begin{frame}
   \frametitle{"The Civil GPS Spoofer"}
   \begin{figure}
-    \includegraphics[scale=0.2]{pics/texas_spoofer.jpg}
-    \caption{Civil GPS Spoofer}
+    \includegraphics[scale=0.2]{thesis/graphics/spoof.jpg}
+    \caption{Civil GPS Spoofer \cite{EVPMUGA}}
   \end{figure}
-  "The Civil GPS Spoofer"
-  \begin{itemize}
-    \item Laget et av et team fra \textit{The University of Texas at Austin} i 2012 \cite{EVPMUGA}
-    \item Implementert i "SDR"
-    \item Simulere opptil 14 "falske" satellitter.
-  \end{itemize}
+  %\begin{itemize}
+  %  \item Laget et av et team fra \textit{The University of Texas at Austin} i 2012 \cite{EVPMUGA}
+  %  \item Implementert i "SDR"
+  %  \item Simulere opptil 14 "falske" satellitter.
+  %\end{itemize}
 \end{frame}
 
 \begin{frame}
