--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -268,6 +268,11 @@
   note = {Accessed: 30-10-2016}
   }
 
+@misc{PMU,
+  author ="Kontinuum Engineering and Design Center",
+  url= "http://ec-continuum.ru/eng/projects/pmu.shtml",
+  }
+
 % Comments:
 % Both C_RATIONAL and GNU_SOCKETS are obviously credited wrong.
 % What is the right way? :/
