--- a/presentation.tex
+++ b/presentation.tex
@@ -150,16 +150,18 @@
 \subsection{Flere GPS mottakere}
 \begin{frame} 
   \frametitle{Flere GPS mottakere og kjent posisjon}
-  \begin{itemize}
-    \item En GPS mottakere med ukjent posisjon: Lett
-    \item En GPS mottakere med kjent posisjon: Gjennomførbart
-    \item To GPS mottakere med kjent posisjon: Svært komplisert
-    \begin{itemize}
-      \item Minimum en mottakere løser feil posisjon.
-      \item Med mindre "spooferen" er like langt fra begge, forskjell i tidsløsning.  
-    \end{itemize}
-  \end{itemize}
-  Kompleksiteten øker for hver GPS mottaker som legges til.
+  \begin{figure}
+    \includegraphics[scale=0.2]{thesis/graphics/toantenner.pdf}
+    \caption{Spoofing deteksjon med to antenner}
+  \end{figure}
+\end{frame}
+
+\begin{frame} 
+  \frametitle{Flere GPS mottakere og kjent posisjon}
+  \begin{figure}
+    \includegraphics[scale=0.2]{thesis/graphics/toantenner_2.pdf}
+    \caption{Spoofing deteksjon med to antenner}
+  \end{figure}
 \end{frame}
 
 \subsection{Referanseklokke}
