--- a/presentation.tex
+++ b/presentation.tex
@@ -138,13 +138,9 @@
 \begin{frame}
 \frametitle{Deteksjon og mottiltak}
   \begin{itemize}
-    \item Deteksjon
-    \begin{itemize}
-      \item Bruke flere GPS mottakere med kjent posisjon.
-      \item Bruke stabil klokke som referanse.
+      \item Bruke flere GPS mottakere med kjent posisjon og hastighet.
+      \item Gode klokker -- Små korreksjoner.
     \end{itemize}
-    \item Mottiltak: Bruke klokke som tidskilde.
-  \end{itemize}
 \end{frame}
 
 \subsection{Flere GPS mottakere}
