Updated presentation, added raspiongps figure

--- a/presentation.tex
+++ b/presentation.tex
@@ -203,16 +203,19 @@
 \subsection{Sensor server arkitektur}
 \begin{frame}
   \frametitle{Sensor server arkitektur}
-  \begin{itemize}
-    \item Mottaker + Raspberry PI = Sensor
-    \item Eliminerer behovet for lange signalkabler, bruke nettverk:
-    \begin{itemize}
-      \item Fiber
-      \item Mobilnett (3G og 4G)
-      \item WiFi
-    \end{itemize}
-    \item Antall mottakere begrenset av serverens maskinvare.
-  \end{itemize}
+    \begin{figure}
+      \includegraphics[scale=0.2]{thesis/graphics/raspi_gps.pdf}
+    \end{figure}
+  %\begin{itemize}
+  %  \item Mottaker + Raspberry PI = Sensor
+  %  \item Eliminerer behovet for lange signalkabler, bruke nettverk:
+  %  \begin{itemize}
+  %    \item Fiber
+  %    \item Mobilnett (3G og 4G)
+  %    \item WiFi
+  %  \end{itemize}
+  %  \item Antall mottakere begrenset av serverens maskinvare.
+  %\end{itemize}
 \end{frame}
 
 \begin{frame}
