--- a/presentation.tex
+++ b/presentation.tex
@@ -222,7 +222,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Kommunikasjon: roller}
+  \frametitle{Kommunikasjon: Roller}
     \begin{figure}
       \includegraphics[scale=0.3]{thesis/graphics/server_explain.pdf}
     \end{figure}
@@ -242,6 +242,23 @@
   \frametitle{Kommunikasjon: GPS data}
     \begin{figure}
       \includegraphics[scale=0.25]{thesis/graphics/sensor_nmea.pdf}
+    \end{figure}
+  %\begin{itemize}
+  %  \item Mottaker + Raspberry PI = Sensor
+  %  \item Eliminerer behovet for lange signalkabler, bruke nettverk:
+  %  \begin{itemize}
+  %    \item Fiber
+  %    \item Mobilnett (3G og 4G)
+  %    \item WiFi
+  %  \end{itemize}
+  %  \item Antall mottakere begrenset av serverens maskinvare.
+  %\end{itemize}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Kommunikasjon: Interaksjon}
+    \begin{figure}
+      \includegraphics[scale=0.3]{thesis/graphics/monitor_csac_request.pdf}
     \end{figure}
   %\begin{itemize}
   %  \item Mottaker + Raspberry PI = Sensor
