--- a/presentation.tex
+++ b/presentation.tex
@@ -348,7 +348,7 @@
 \frametitle{Oppsett: plassering av mottakere}
       \begin{figure}
         \includegraphics[scale=0.18]{thesis/graphics/roof.eps}
-        \caption{Plasseringen av GPS mottakere}
+        \caption{Plasseringen av GPS-mottakere}
       \end{figure}
 \end{frame}
 
