--- a/presentation.tex
+++ b/presentation.tex
@@ -152,9 +152,13 @@
 \begin{frame}
 \frametitle{Deteksjon og mottiltak}
   \begin{itemize}
-        \setlength\itemsep{2em}
-      \item Bruke flere GPS mottakere med kjent posisjon og hastighet.
-      \item Gode klokker -- Små korreksjoner.
+        \setlength\itemsep{1em}
+      \item Sammenlikne kjent posisjon mot løst.
+      \item Bruke flere GPS-mottakere.
+      \item Bruke god klokke for vurdering av tidsløsning.
+        \begin{itemize}
+          \item Også mottiltak!
+        \end{itemize}
     \end{itemize}
 \end{frame}
 
@@ -175,34 +179,34 @@
   \end{figure}
 \end{frame}
 
-\subsection{Referanseklokke}
+\subsection{En god klokke}
 \begin{frame}
-  \frametitle{Referanseklokke}
+  \frametitle{En god klokke}
   \begin{columns}
     \column{0.5\textwidth}
     \begin{itemize}
           \setlength\itemsep{2em}
-      \item Trenger får korreksjoner
+      \item Trenger få korreksjoner
       \item Lite påvirket av temperatur
       \item Intern frekvensteller og styringsalgoritme
     \end{itemize}
     \column{0.5\textwidth}
       \begin{figure}
         \includegraphics[scale=0.2]{thesis/graphics/csac.jpg}
-      \caption{Symmetricom SA.45s CSAC}
+      \caption{Symmetricom SA.45s CSAC \cite{SADS}}
     \end{figure}
   \end{columns}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Referanseklokke}
+  \frametitle{En god klokke}
       \begin{figure}
         \includegraphics[scale=0.35]{thesis/graphics/csac_schematic.pdf}
       \caption{CSAC blokkdiagram}
     \end{figure}
 \end{frame}
 
-\section{Implementasjon}
+\section{System implementasjon}
 \subsection{Ønsket funksjonalitet}
 \begin{frame}
   \frametitle{Ønsket funksjonalitet}
@@ -215,9 +219,9 @@
   \end{itemize}
 \end{frame}
 
-\subsection{Sensor server arkitektur}
+\subsection{Sensor server}
 \begin{frame}
-  \frametitle{Sensor server arkitektur ide}
+  \frametitle{Sensor server: Idé}
     \begin{figure}
       \includegraphics[scale=0.2]{thesis/graphics/raspi_gps.pdf}
     \end{figure}
@@ -234,7 +238,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Sensor server arkitektur}
+  \frametitle{Sensor server: Arkitektur}
     \begin{figure}
       \includegraphics[scale=0.25]{thesis/graphics/csac_core_simplified.pdf}
     \end{figure}
